# semantic-model-weaver

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.kr.md  README.md  example-queries.sql  pyproject.toml
.claude/architecture/: ARCHITECTURE.md
.claude/info/: CRITERIA.md  DATASETS.md  PRESENTATION.md  STATEMENT.md  TEMPLATE.md
.claude/whoami/: ME.md
.github/workflows/: build.yaml
examples/korean_population/: app.py  model.yaml
examples/nextrade/: app.py
examples/seoul_floating_population/: app.py
examples/streamlit-on-snowflake/: README.md
examples/streamlit-on-snowflake/manifest/: nti_model.yaml
examples/telecom/: Dockerfile  app.py
forge/: __main__.py  dsl.py  evaluator.py
manifest/KOREAN_POPULATION__APARTMENT_MARKET_PRICE_DATA.HACKATHON_2025Q2/20260409_124827/: model.enriched.yaml  model.final.yaml  model.iter1.yaml  model.yaml  scenarios.json  synonyms.iter1.json  synonyms.json
manifest/NEXTRADE_EQUITY_MARKET_DATA.FIN/20260409_124406/: model.enriched.yaml  model.iter1.yaml  model.iter2.yaml  model.iter3.yaml  model.yaml  scenarios.json  synonyms.iter1.json  synonyms.iter2.json  synonyms.iter3.json  synonyms.json
manifest/SEOUL_DISTRICTLEVEL_DATA_FLOATING_POPULATION_CONSUMPTION_AND_ASSETS.GRANDATA/20260409_125001/: model.enriched.yaml  model.final.yaml  model.iter1.yaml  model.iter2.yaml  model.yaml  scenarios.json  synonyms.iter1.json  synonyms.iter2.json  synonyms.iter3.json  synonyms.json
manifest/SOUTH_KOREA_TELECOM_SUBSCRIPTION_ANALYTICS__CONTRACTS_MARKETING_AND_CALL_CENTER_INSIGHTS_BY_REGION.TELECOM_INSIGHTS/20260409_125005/: model.enriched.yaml  model.iter1.yaml  model.iter2.yaml  model.iter3.yaml  model.yaml  scenarios.json  synonyms.iter1.json  (+3 more)
tests/: test_cortex_analyst_api.py  test_discovery.py  test_dsl.py  test_enricher.py  test_evaluator.py  test_probe.py  test_refiner.py  test_scenarios.py  test_writer.py
weaver/: __main__.py  discovery.py  dsl.py  enricher.py  evaluator.py  probe.py  query_history.py  refiner.py  scenarios.py  writer.py
